--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-error-overlay": "6.0.9"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@expo-google-fonts/space-grotesk": "^0.2.2",
     "@expo/metro-config": "^0.7.1",
     "@expo/webpack-config": "18.1.2",
@@ -40,6 +41,7 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.2",
+    "@ui-kitten/components": "^5.3.1",
     "apisauce": "2.1.5",
     "date-fns": "^2.29.2",
     "expo": "^48.0.15",
@@ -60,10 +62,13 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-bootsplash": "4.5.0",
+    "react-native-calendars": "^1.1301.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.14.0",
+    "react-native-svg-transformer": "^1.1.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.3"
