--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@eva-design/eva": "^2.2.0",
     "@expo/metro-config": "^0.7.1",
     "@expo/webpack-config": "18.1.2",
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.2",
