--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@eva-design/eva": "^2.2.0",
     "@expo/metro-config": "^0.7.1",
     "@expo/webpack-config": "18.1.2",
-    "@gorhom/bottom-sheet": "^4",
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@hookform/resolvers": "^3.3.2",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.2",
@@ -61,6 +62,7 @@
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
     "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.71.14",
     "react-native-bootsplash": "4.5.0",
     "react-native-calendars": "^1.1301.0",
@@ -73,7 +75,9 @@
     "react-native-url-polyfill": "^2.0.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
-    "reactotron-react-native": "5.0.3"
+    "reactotron-react-native": "5.0.3",
+    "reanimated-color-picker": "^2.4.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
