--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "reactotron-mst": "3.1.4",
