--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-hook-form": "^7.48.2",
     "react-native": "0.71.14",
     "react-native-bootsplash": "4.5.0",
