--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "date-fns": "^2.29.2",
     "expo": "~48.0.21",
     "expo-application": "~5.1.1",
+    "expo-blur": "~12.2.2",
     "expo-build-properties": "~0.6.0",
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
     "expo-file-system": "~15.2.1",
     "expo-font": "~11.1.1",
+    "expo-haptics": "^12.6.0",
     "expo-linking": "~4.0.1",
     "expo-localization": "~14.1.1",
     "expo-modules-core": "~1.2.3",
