--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "jsx": "react-native",
-    "module": "es2015",
+    "module": "ES2022",
     "moduleResolution": "node",
     "noImplicitAny": false,
     "noImplicitReturns": true,
