feat: create task, date picker bottom sheets and context

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-hook-form": "^7.48.2",
     "react-native": "0.71.14",
     "react-native-bootsplash": "4.5.0",
-    "react-native-calendars": "^1.1301.0",
+    "react-native-calendars": "^1.1303.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-notifier": "^1.9.0",
     "react-native-reanimated": "~2.14.4",
@@ -78,6 +78,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-native-ui-lib": "^7.13.0",
     "react-native-url-polyfill": "^2.0.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
@@ -123,7 +124,7 @@
     "metro-react-native-babel-preset": "0.75.1",
     "metro-source-map": "0.75.1",
     "mocha": "6",
-    "patch-package": "6.4.7",
+    "patch-package": "^8.0.0",
     "postinstall-prepare": "1.0.1",
     "prettier": "2.8.8",
     "query-string": "^7.0.1",
