--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "splash": {
       "image": "./assets/images/splash-logo-all.png",
       "resizeMode": "contain",
-      "backgroundColor": "#0049b0"
+      "backgroundColor": "#626894"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -28,7 +28,7 @@
       "splash": {
         "image": "./assets/images/splash-logo-android-universal.png",
         "resizeMode": "contain",
-        "backgroundColor": "#0049b0"
+        "backgroundColor": "#626894"
       }
     },
     "ios": {
@@ -39,7 +39,7 @@
         "image": "./assets/images/splash-logo-ios-mobile.png",
         "tabletImage": "./assets/images/splash-logo-ios-tablet.png",
         "resizeMode": "contain",
-        "backgroundColor": "#0049b0"
+        "backgroundColor": "#626894"
       }
     },
     "web": {
@@ -47,7 +47,7 @@
       "splash": {
         "image": "./assets/images/splash-logo-web.png",
         "resizeMode": "contain",
-        "backgroundColor": "#0049b0"
+        "backgroundColor": "#626894"
       }
     },
     "plugins": ["expo-localization", "expo-build-properties"],
