--- a/package.json
+++ b/package.json
@@ -72,10 +72,12 @@
     "react-native-bootsplash": "4.5.0",
     "react-native-calendars": "^1.1303.0",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-notifier": "^1.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-ui-lib": "^7.13.0",
